# 2dosui

./: .env.example  .gitignore  README.md  config.toml.example  pyproject.toml  requirements-pi.txt
config/: mock.fast.json  pi.aggregate.json  secrets.example.json
docs/: raspberry_pi_deploy.md
plan/: 2dosumi_plan.md
scripts/: deploy_pi.ps1  install_twodosumi_web_service.sh  setup_pi_ssh_key.ps1
src/dosumi/: __init__.py  cli.py  config.py  outputs.py  sources.py  state.py
systemd/: 2dosumi.service
tests/: test_alarm.py  test_config_and_sensor.py  test_detector.py  test_logger.py  test_notifier_and_status.py  test_scheduled_alarm.py  test_state.py  test_web.py
twodosumi/: __init__.py  alarm.py  cli.py  config.py  detector.py  logger.py  notifier.py  scheduled_alarm.py  sensors.py  status.py  web.py
