[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "2dosumi"
version = "0.1.0"
description = "Raspberry Pi bed load-cell second-sleep prevention system"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
2dosumi = "dosumi.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
